Send user specific food information
